chore: add new font, and game master view

--- a/front/app.json
+++ b/front/app.json
@@ -12,8 +12,14 @@
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
-      "**/*"
+      "**/*",
+      "assets/*"
     ],
+    "fonts": {
+      "ancient": {
+        "asset": "./assets/fonts/ancient.ttf"
+      }
+    },
     "ios": {
       "supportsTablet": true
     },
