--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,8 @@
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.2",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "@types/react": "~18.2.14",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
