--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,9 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,9 +24,7 @@
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.2",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14",
-    "expo-font": "~11.4.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
